chore: Misc fixes - drawers spacing, borders, toolbar issues with dark header

--- a/src/container/styles.scss
+++ b/src/container/styles.scss
@@ -206,7 +206,6 @@
 
   &-variant-full-page.header-stuck {
     box-shadow: none;
-    border-bottom: awsui.$border-divider-section-width solid awsui.$color-border-divider-default;
 
     &::before {
       content: '';
