--- a/src/drawer/styles.scss
+++ b/src/drawer/styles.scss
@@ -10,7 +10,7 @@
 .drawer {
   @include styles.styles-reset;
   word-wrap: break-word;
-  padding-block-start: awsui.$space-scaled-l;
+  padding-block-start: awsui.$space-panel-header-vertical;
   padding-block-end: awsui.$space-scaled-xxxl;
   padding-inline-start: awsui.$space-panel-side-left;
   padding-inline-end: awsui.$space-panel-side-right;
@@ -22,7 +22,7 @@
   padding-block-end: awsui.$space-scaled-l;
   padding-inline: awsui.$space-panel-side-left calc(#{awsui.$space-xl} + #{awsui.$space-scaled-xxl});
   // padding to make sure the header doesn't overlap with the close icon
-  border-block-end: awsui.$border-divider-section-width solid awsui.$color-border-divider-default;
+  border-block-end: awsui.$border-panel-header-width solid awsui.$color-border-divider-default;
   margin-block-start: 0;
   margin-block-end: awsui.$space-scaled-l;
   margin-inline-end: calc(-1 * #{awsui.$space-panel-side-right});
